修复JDK9不能用BASE64Encoder